# lazyaz

./: Cargo.toml  build.rs
docs/: TODO.md  future-improvements.md
src/: app.rs  config.rs  event.rs  keys.rs  main.rs  report.rs  session.rs
src/api/: azure.rs  mock.rs  mod.rs  models.rs
src/auth/: mock.rs  mod.rs  oauth.rs  pat.rs
src/ui/: calendar.rs  config_tab.rs  date_range.rs  detail.rs  fuzzy.rs  help.rs  info_editor.rs  input.rs  iteration_picker.rs  mod.rs  picker.rs  resolution.rs  search.rs  tabs.rs  tags_editor.rs  theme.rs  tree.rs  type_filter.rs  wizard.rs  workitems.rs  yank.rs
